# logging

./: .gitignore  MODULE.bazel  RELEASE_NOTES.md
.github/workflows/: build.yml  component_tests.yml  component_tests_nightly.yml  docs.yml
docs/: index.rst
docs/components/datarouter/: index.rst  requirements.rst
docs/components/mw/log/: index.rst  requirements.rst
docs/logging/: stats.rst
score/datarouter/: BUILD
score/datarouter/src/daemon/: persistentlogging_config.cpp
score/datarouter/test/ut/ut_logging/: test_dltprotocol.cpp  test_logparser.cpp
