# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
module(
    name = "score_logging",
    version = "0.0.0",
)

# Bazel global rules
bazel_dep(name = "rules_python", version = "1.8.5")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_rust", version = "0.68.1-score")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "aspect_rules_lint", version = "2.5.0")

bazel_dep(name = "score_cpp_policies", version = "0.0.0", dev_dependency = True)
git_override(
    module_name = "score_cpp_policies",
    commit = "b6551c217fbb0daf948b493c4ba69eb7fe8359a5",
    remote = "https://github.com/eclipse-score/score_cpp_policies.git",
)

bazel_dep(name = "toolchains_llvm", version = "1.7.0", dev_dependency = True)

bazel_dep(name = "buildifier_prebuilt", version = "8.5.1")
bazel_dep(name = "platforms", version = "1.0.0")

# S-CORE process rules
bazel_dep(name = "score_bazel_platforms", version = "0.1.2")

bazel_dep(name = "score_docs_as_code", version = "4.6.0", dev_dependency = True)

bazel_dep(name = "score_tooling", version = "1.2.0")
single_version_override(
    module_name = "score_tooling",
    version = "1.1.2",
)

bazel_dep(name = "score_rust_policies", version = "0.0.5")

bazel_dep(name = "score_process", version = "1.5.4", dev_dependency = True)
bazel_dep(name = "score_platform", version = "0.6.0", dev_dependency = True)
bazel_dep(name = "score_itf", version = "0.4.0", dev_dependency = True)

# OCI / Docker image rules for integration tests
bazel_dep(name = "rules_oci", version = "2.2.7", dev_dependency = True)
bazel_dep(name = "rules_pkg", version = "1.2.0", dev_dependency = True)

# QNX image filesystem rules for QNX integration tests
bazel_dep(name = "score_rules_imagefs", version = "0.0.1", dev_dependency = True)

imagefs = use_extension("@score_rules_imagefs//extensions:imagefs.bzl", "imagefs", dev_dependency = True)
imagefs.toolchain(
    name = "score_qnx_x86_64_ifs_toolchain",
    sdp_to_import = "@score_qcc_x86_64_toolchain_pkg",
    sdp_version = "8.0.0",
    target_cpu = "x86_64",
    target_os = "qnx",
    type = "ifs",
)
use_repo(
    imagefs,
    "score_qnx_x86_64_ifs_toolchain",
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci", dev_dependency = True)
oci.pull(
    name = "ubuntu_24_04",
    digest = "sha256:2e863c44b718727c860746568e1d54afd13b2fa71b160f5cd9058fc436217b30",
    image = "ubuntu",
    platforms = ["linux/amd64"],
    tag = "24.04",
)
use_repo(oci, "ubuntu_24_04", "ubuntu_24_04_linux_amd64")

# Toolchains and extensions
bazel_dep(name = "score_bazel_cpp_toolchains", version = "0.5.4", dev_dependency = True)
bazel_dep(name = "score_toolchains_rust", version = "0.8.0", dev_dependency = True)

# S-CORE crates
bazel_dep(name = "score_crates", version = "0.0.9")

# TRLC dependency for requirements traceability
bazel_dep(name = "trlc", version = "0.0.0", dev_dependency = True)
git_override(
    module_name = "trlc",
    commit = "650b51a47264a4f232b3341f473527710fc32669",  # trlc-2.0.2 release
    remote = "https://github.com/bmw-software-engineering/trlc.git",
)

gcc = use_extension("@score_bazel_cpp_toolchains//extensions:gcc.bzl", "gcc", dev_dependency = True)
gcc.toolchain(
    name = "score_qcc_aarch64_toolchain",
    sdp_version = "8.0.0",
    target_cpu = "aarch64",
    target_os = "qnx",
    use_default_package = True,
    version = "12.2.0",
)
gcc.toolchain(
    name = "score_gcc_x86_64_toolchain",
    target_cpu = "x86_64",
    target_os = "linux",
    use_default_package = True,
    version = "12.2.0",
)
gcc.toolchain(
    name = "score_qcc_x86_64_toolchain",
    sdp_version = "8.0.0",
    target_cpu = "x86_64",
    target_os = "qnx",
    use_default_package = True,
    version = "12.2.0",
)
use_repo(
    gcc,
    "score_gcc_x86_64_toolchain",
    "score_qcc_aarch64_toolchain",
    "score_qcc_x86_64_toolchain",
    "score_qcc_x86_64_toolchain_pkg",
)

llvm = use_extension(
    "@toolchains_llvm//toolchain/extensions:llvm.bzl",
    "llvm",
    dev_dependency = True,
)
llvm.toolchain(
    llvm_version = "19.1.7",
)
use_repo(llvm, "llvm_toolchain")

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)

# C++ dependencies

bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "rapidjson", version = "1.1.0.bcr.20241007")
bazel_dep(name = "score_baselibs", version = "0.2.9")
bazel_dep(name = "score_communication", version = "0.2.1")

# Rust dependencies

# Due to incoming transitive deps from baselibs flatbuffers module.
# FIXME: To be removed after https://github.com/eclipse-score/baselibs/issues/266 is resolved
single_version_override(
    module_name = "grpc-java",
    version = "1.70.0",
)
